--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Freezy has had it with Arthur😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">30 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Let’s make a Connors RSI trading strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Power of Kundalini | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Let spinning some pizzas dough #pizza #pizza #pizzastreetfood #food #streetfood</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>A tender moment from Ecstasy of Enlightenment in San Francisco | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Judging criminal r/AITAH Posts #5</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>The system is rigged against you. Here's how</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Seeing the World Like a Child</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Dhyanalinga – A Storehouse of Kriyas | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -992,7 +992,7 @@
                     <div class="video-info">
                         <h3>Changing the Dynamics of Challenge, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1003,7 +1003,7 @@
                     <div class="video-info">
                         <h3>🔴 SIDEMEN x BOV BOYS FORTNITE</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1674,7 +1674,7 @@
                     <div class="video-info">
                         <h3>The Power of Stillness, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1685,7 +1685,7 @@
                     <div class="video-info">
                         <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Let’s make a Connors RSI trading strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>The system is rigged against you. Here's how</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Power of Kundalini | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>A tender moment from Ecstasy of Enlightenment in San Francisco | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7964,7 +7964,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Seeing the World Like a Child</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8041,7 +8041,7 @@
                         <div class="video-info">
                             <h3>Dhyanalinga – A Storehouse of Kriyas | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8206,7 +8206,7 @@
                         <div class="video-info">
                             <h3>Changing the Dynamics of Challenge, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8360,7 +8360,7 @@
                         <div class="video-info">
                             <h3>The Power of Stillness, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Let spinning some pizzas dough #pizza #pizza #pizzastreetfood #food #streetfood</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Freezy has had it with Arthur😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">30 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Judging criminal r/AITAH Posts #5</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10463,7 +10463,7 @@
                         <div class="video-info">
                             <h3>🔴 SIDEMEN x BOV BOYS FORTNITE</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10661,7 +10661,7 @@
                         <div class="video-info">
                             <h3>Vikkstar’s COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
