--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 05.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Freezy has had it with Arthur😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Dismantling Karma | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Technical analysis of the EURUSD...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Energy - The Dance Between Consciousness and Form</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 04.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN RANK THE WORLDS BEST PIZZA</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -706,7 +706,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -717,7 +717,7 @@
                     <div class="video-info">
                         <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -970,7 +970,7 @@
                     <div class="video-info">
                         <h3>DRUNK PUMPKIN CARVING</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 05.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Technical analysis of the EURUSD...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 04.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Dismantling Karma | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Energy - The Dance Between Consciousness and Form</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8140,7 +8140,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Breaking Free from Life’s Repeating Patterns</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8151,7 +8151,7 @@
                         <div class="video-info">
                             <h3>How to Break Free from Life's Repeating Patterns? Teaching by Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Freezy has had it with Arthur😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN RANK THE WORLDS BEST PIZZA</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10452,7 +10452,7 @@
                         <div class="video-info">
                             <h3>DRUNK PUMPKIN CARVING</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
